<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".PythonPublicVariablesAndMethods"
    android:background="@color/layout_background_color">

    <ScrollView
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:id="@+id/scrollView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:layout_editor_absoluteX="1dp"
        tools:layout_editor_absoluteY="1dp">
        <LinearLayout
            android:paddingTop="20dp"
            android:paddingBottom="20dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >
            <TextView
                android:lineSpacingMultiplier="1.2"
                android:textIsSelectable="true"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:fontFamily="@font/cambay"
                android:textStyle="bold"
                android:textColor="@color/code_color"
                android:textSize="16sp"
                android:text="@string/example_1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
            <androidx.cardview.widget.CardView
                app:cardCornerRadius="1dp"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:layout_marginTop="5dp"
                android:layout_width="match_parent"
                app:cardElevation="0dp"
                android:layout_height="wrap_content">
                <HorizontalScrollView
                    android:background="@color/card_backgroud2"
                    android:scrollbarThumbHorizontal="@color/card_backgroud2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <LinearLayout
                        android:orientation="horizontal"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content">

                        <TextView
                            android:lineSpacingMultiplier="1.5"
                            android:textIsSelectable="true"
                            android:id="@+id/example1"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/roboto_mono"
                            android:text=""
                            android:paddingTop="20dp"
                            android:paddingBottom="20dp"
                            android:paddingLeft="11dp"
                            android:paddingRight="11dp"
                            android:textColor="@color/code_color"
                            android:textSize="14sp"
                            android:paddingStart="11dp" />
                    </LinearLayout>
                </HorizontalScrollView>
            </androidx.cardview.widget.CardView>
            <TextView
                android:lineSpacingMultiplier="1.2"
                android:textIsSelectable="true"
                android:layout_marginTop="20dp"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:fontFamily="@font/cambay"
                android:textStyle="bold"
                android:textColor="@color/code_color"
                android:textSize="16sp"
                android:text="@string/output"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
            <HorizontalScrollView
                android:scrollbarThumbHorizontal="@color/layout_background_color"
                android:layout_marginTop="5dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent">
                    <TextView
                        android:lineSpacingMultiplier="1.5"
                        android:textIsSelectable="true"
                        android:id="@+id/output1"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/roboto_mono"
                        android:paddingLeft="10dp"
                        android:paddingRight="10dp"
                        android:paddingBottom="10dp"
                        android:text=""
                        android:textColor="@color/output_color"
                        android:textSize="14sp" />
                </LinearLayout>
            </HorizontalScrollView>
            <View
                android:layout_marginTop="20dp"
                android:layout_marginBottom="20dp"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/black"
                />
            <TextView
                android:lineSpacingMultiplier="1.2"
                android:textIsSelectable="true"
                android:layout_marginTop="10dp"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:fontFamily="@font/cambay"
                android:textStyle="bold"
                android:textColor="@color/code_color"
                android:textSize="16sp"
                android:text="@string/example_2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
            <androidx.cardview.widget.CardView
                app:cardCornerRadius="1dp"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:layout_marginTop="5dp"
                android:layout_width="match_parent"
                app:cardElevation="0dp"
                android:layout_height="wrap_content">
                <HorizontalScrollView
                    android:background="@color/card_backgroud2"
                    android:scrollbarThumbHorizontal="@color/card_backgroud2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <LinearLayout
                        android:orientation="horizontal"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content">
                        <TextView
                            android:lineSpacingMultiplier="1.5"
                            android:textIsSelectable="true"
                            android:id="@+id/example2"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/roboto_mono"
                            android:text=""
                            android:paddingTop="20dp"
                            android:paddingBottom="20dp"
                            android:paddingLeft="11dp"
                            android:paddingRight="11dp"
                            android:textColor="@color/code_color"
                            android:textSize="14sp"
                            android:paddingStart="11dp" />
                    </LinearLayout>
                </HorizontalScrollView>
            </androidx.cardview.widget.CardView>
            <TextView
                android:lineSpacingMultiplier="1.2"
                android:textIsSelectable="true"
                android:layout_marginTop="20dp"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:fontFamily="@font/cambay"
                android:textStyle="bold"
                android:textColor="@color/code_color"
                android:textSize="16sp"
                android:text="@string/output"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
            <HorizontalScrollView
                android:scrollbarThumbHorizontal="@color/layout_background_color"
                android:layout_marginTop="5dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent">
                    <TextView
                        android:lineSpacingMultiplier="1.5"
                        android:textIsSelectable="true"
                        android:id="@+id/output2"
                        android:paddingLeft="10dp"
                        android:paddingRight="10dp"
                        android:paddingBottom="10dp"
                        android:fontFamily="@font/roboto_mono"
                        android:textColor="@color/output_color"
                        android:textSize="14sp"
                        android:text=""
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"/>
                </LinearLayout>
            </HorizontalScrollView>
            <View
                android:layout_marginTop="20dp"
                android:layout_marginBottom="20dp"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/black"
                />
            <TextView
                android:lineSpacingMultiplier="1.2"
                android:textIsSelectable="true"
                android:layout_marginTop="10dp"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:fontFamily="@font/cambay"
                android:textStyle="bold"
                android:textColor="@color/code_color"
                android:textSize="16sp"
                android:text="@string/example_3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
            <androidx.cardview.widget.CardView
                app:cardCornerRadius="1dp"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:layout_marginTop="5dp"
                android:layout_width="match_parent"
                app:cardElevation="0dp"
                android:layout_height="wrap_content">
                <HorizontalScrollView
                    android:background="@color/card_backgroud2"
                    android:scrollbarThumbHorizontal="@color/card_backgroud2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <LinearLayout
                        android:orientation="horizontal"
                        android:layout_width="wrap_content"
                        android:weightSum="1"
                        android:layout_height="wrap_content">
                        <TextView
                            android:lineSpacingMultiplier="1.5"
                            android:textIsSelectable="true"
                            android:id="@+id/example3"
                            android:layout_width="0dp"
                            android:layout_weight="1"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/roboto_mono"
                            android:text=""
                            android:paddingTop="20dp"
                            android:paddingBottom="20dp"
                            android:paddingLeft="11dp"
                            android:paddingRight="11dp"
                            android:textColor="@color/code_color"
                            android:textSize="14sp"
                            android:paddingStart="11dp" />
                    </LinearLayout>
                </HorizontalScrollView>
            </androidx.cardview.widget.CardView>
            <TextView
                android:lineSpacingMultiplier="1.2"
                android:textIsSelectable="true"
                android:layout_marginTop="20dp"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:fontFamily="@font/cambay"
                android:textStyle="bold"
                android:textColor="@color/code_color"
                android:textSize="16sp"
                android:text="@string/output"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
            <HorizontalScrollView
                android:scrollbarThumbHorizontal="@color/layout_background_color"
                android:layout_marginTop="5dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent">
                    <TextView
                        android:lineSpacingMultiplier="1.5"
                        android:textIsSelectable="true"
                        android:id="@+id/output3"
                        android:paddingLeft="10dp"
                        android:paddingRight="10dp"
                        android:paddingBottom="10dp"
                        android:fontFamily="@font/roboto_mono"
                        android:textColor="@color/output_color"
                        android:textSize="14sp"
                        android:text=""
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"/>
                </LinearLayout>
            </HorizontalScrollView>
            <RelativeLayout
                android:layout_marginTop="50dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <TextView
                    android:padding="10dp"
                    android:fontFamily="@font/fredoka_one"
                    android:textAlignment="viewStart"
                    android:id="@+id/previous"
                    android:textStyle="bold"
                    android:textSize="23sp"
                    android:textColor="@color/purple_500"
                    android:text="@string/previous"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="start"
                    android:layout_marginStart="10dp"
                    android:layout_alignParentStart="true" />
                <TextView
                    android:padding="10dp"
                    android:fontFamily="@font/fredoka_one"
                    android:textAlignment="viewEnd"
                    android:id="@+id/next"
                    android:textStyle="bold"
                    android:textSize="23sp"
                    android:textColor="@color/purple_500"
                    android:text="@string/next"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="end"
                    android:layout_marginEnd="20dp"
                    android:layout_alignParentEnd="true" />
            </RelativeLayout>
        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>